--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -7,17 +7,17 @@ $font-family:       "Helvetica Neue", Helvetica, Arial, sans-serif;
 $code-font-family:  Menlo, Monaco, "Courier New", monospace;
 
 
-$masthead-color:         #505050;
-$masthead-small-color:   #C0C0C0;
+$masthead-color:         #708090;
+$masthead-small-color:   #66CDAA;
 
 $post-title-color:       #303030;
 $post-date-color:        #9a9a9a;
 
 
-$body-color:            #515151;
-$body-background-color: #fff;
+$body-color:            #5F9EA0;
+$body-background-color: #DCDCDC;
 
-$link-color:            #268bd2;
+$link-color:            #7CFC00;
 
 $headings-color:        #313131;    // h1,h2,h3,h4,h5,h6
 
