--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -11,10 +11,10 @@ $masthead-color:         #708090;
 $masthead-small-color:   #66CDAA;
 
 $post-title-color:       #00008B;
-$post-date-color:        #9a9a9a;
+$post-date-color:        #800000;
 
 
-$body-color:            #5F9EA0;
+$body-color:            #008080;
 $body-background-color: #DCDCDC;
 
 $link-color:            #7CFC00;
