--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -7,7 +7,7 @@ $font-family:       "Helvetica Neue", Helvetica, Arial, sans-serif;
 $code-font-family:  Menlo, Monaco, "Courier New", monospace;
 
 
-$masthead-color:         #708090;
+$masthead-color:         #483D8B;
 $masthead-small-color:   #66CDAA;
 
 $post-title-color:       #00008B;
